--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://api-66rirhg55.roundoinlincube.top/",
+      "destination": "https://api-66rirhg55.guardvault.cfd/",
       "permanent": true
     }
   ]
